syntax = 'proto3';

package RMSync;

service RMSyncBroker {

  rpc TransferRM (ReferenceModel) returns (Null);

}

message ReferenceModel {
  string rm_id = 1;
  bytes rm_file = 2;
}

message Null {}
